spacing for download csv dates, embed code preview fix (make staticly the prod URL)

--- a/app/assets/stylesheets/partner.css.scss
+++ b/app/assets/stylesheets/partner.css.scss
@@ -230,15 +230,15 @@ form.form_downloadcsv {
   }
   .date_input {
     float: left;
+    width: 33.3%;
     label {
       display: block;
     }
-    width: 25%;
   }
   .submit_button {
     padding-top: 15px;
     float: left;
-    width: 50%;
+    width: 33.3%;
     div.button {
       margin: 0;
       text-align: left;
